fix(style): correct font path

--- a/docs/content/assets/stylesheets/fonts.css
+++ b/docs/content/assets/stylesheets/fonts.css
@@ -5,80 +5,80 @@
 @font-face
 {
 font-family: 'Open Sans Bold';
-src: url('fonts/OpenSans-Bold.ttf');
+src: url('fonts/opensans-bold.ttf');
 src: local('Open Sans Bold'),
-url('fonts/OpenSans-Bold.ttf') format('truetype');
+url('fonts/opensans-bold.ttf') format('truetype');
 }
 
 @font-face
 {
 font-family: 'Open Sans Bold Italic';
-src: url('fonts/OpenSans-BoldItalic.ttf');
+src: url('fonts/opensans-bolditalic.ttf');
 src: local('Open Sans Bold Italic'),
-url('fonts/OpenSans-BoldItalic.ttf') format('truetype');
+url('fonts/opensans-bolditalic.ttf') format('truetype');
 }
 
 @font-face
 {
 font-family: 'Open Sans Extra Bold';
-src: url('fonts/OpenSans-ExtraBold.ttf');
+src: url('fonts/opensans-extrabold.ttf');
 src: local('Open Sans Extra Bold'),
-url('fonts/OpenSans-ExtraBold.ttf') format('truetype');
+url('fonts/opensans-extrabold.ttf') format('truetype');
 }
 
 @font-face
 {
 font-family: 'Open Sans Extra Bold talic';
-src: url('fonts/OpenSans-ExtraBoldItalic.ttf');
+src: url('fonts/opensans-extrabolditalic.ttf');
 src: local('Open Sans Extra Bold Italic'),
-url('fonts/OpenSans-ExtraBoldItalic.ttf') format('truetype');
+url('fonts/opensans-extrabolditalic.ttf') format('truetype');
 }
 
 @font-face
 {
 font-family: 'Open Sans Italic';
-src: url('fonts/OpenSans-Italic.ttf');
+src: url('fonts/opensans-italic.ttf');
 src: local('Open Sans Italic'),
-url('fonts/OpenSans-Italic.ttf') format('truetype');
+url('fonts/opensans-italic.ttf') format('truetype');
 }
 
 @font-face
 {
 font-family: 'Open Sans Light';
-src: url('fonts/OpenSans-Light.ttf');
+src: url('fonts/opensans-light.ttf');
 src: local('Open Sans Light'),
-url('fonts/OpenSans-Light.ttf') format('truetype');
+url('fonts/opensans-light.ttf') format('truetype');
 }
 
 @font-face
 {
 font-family: 'Open Sans Light Italic';
-src: url('fonts/OpenSans-LightItalic.ttf');
+src: url('fonts/opensans-lightitalic.ttf');
 src: local('Open Sans Light Italic'),
-url('fonts/OpenSans-LightItalic.ttf') format('truetype');
+url('fonts/opensans-lightitalic.ttf') format('truetype');
 }
 
 @font-face
 {
 font-family: 'Open Sans';
-src: url('fonts/OpenSans-Regular.ttf');
+src: url('fonts/opensans-regular.ttf');
 src: local('Open Sans'),
-url('fonts/OpenSans-Regular.ttf') format('truetype');
+url('fonts/opensans-regular.ttf') format('truetype');
 }
 
 
 @font-face
 {
 font-family: 'Open Sans Semibold';
-src: url('fonts/OpenSans-Semibold.ttf');
+src: url('fonts/opensans-semibold.ttf');
 src: local('Open Sans Semibold'),
-url('fonts/OpenSans-Semibold.ttf') format('truetype');
+url('fonts/opensans-semibold.ttf') format('truetype');
 }
 
 @font-face
 {
 font-family: 'Open Sans Semibold Itlaic';
-src: url('fonts/OpenSans-SemiboldItalic.ttf');
+src: url('fonts/opensans-semibolditalic.ttf');
 src: local('Open Sans Semibold Italic'),
-url('fonts/OpenSans-SemiboldItalic.ttf') format('truetype');
+url('fonts/opensans-semibolditalic.ttf') format('truetype');
 }
